work in progress

--- a/micrograd/micrograd_from_scratch.ipynb
+++ b/micrograd/micrograd_from_scratch.ipynb
@@ -6,7 +6,10 @@
    "id": "0b95b2a3",
    "metadata": {},
    "source": [
-    "# Karpathy micrograd Tutorial"
+    "---\n",
+    "# Karpathy micrograd Tutorial\n",
+    "\n",
+    "---"
    ]
   },
   {
