--- a/micrograd/micrograd_from_scratch.ipynb
+++ b/micrograd/micrograd_from_scratch.ipynb
@@ -960,7 +960,7 @@
     "\n",
     "and for '$*$' nodes:\n",
     "\\begin{equation*}\n",
-    "\\boxed{\\text{parent of n}.grad * f(x)}\n",
+    "\\boxed{n.grad = \\text{parent of n}.grad * f(x)}\n",
     "\\end{equation*}\n",
     "\n"
    ]
