--- a/makemore/part_2_MLP.ipynb
+++ b/makemore/part_2_MLP.ipynb
@@ -1723,7 +1723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we train exclusivelt on the training set."
+    "Now we train exclusively on the training set."
    ]
   },
   {
@@ -2068,7 +2068,7 @@
    "source": [
     "---\n",
     "\n",
-    "Let's go ahead and create some variable so that we don't have to hard-code everything."
+    "Let's go ahead and create some variable so that we don't have to hard-code everything. In addition, we'll include all of the main code here."
    ]
   },
   {
@@ -2351,7 +2351,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "---\n",
+    "\n",
+    "We can use the model, trained on a bunch of names, to *make more* names! We see that many of the generated names sound reasonable."
    ]
   },
   {
