--- a/minbpe/bpe.ipynb
+++ b/minbpe/bpe.ipynb
@@ -1485,10 +1485,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_stats(ids: list[int], counts: dict = None) -> dict[tuple[int, int], int]:\n",
+    "    \"\"\"\n",
+    "    Given a list of integers, return a dictionary of counts of consecutive pairs\n",
+    "    Example: [1, 2, 3, 1, 2] -> {(1, 2): 2, (2, 3): 1, (3, 1): 1}\n",
+    "    Optionally allows to update an existing dictionary of counts\n",
+    "    \"\"\"\n",
+    "    counts = {} if counts is None else counts\n",
+    "    for pair in zip(ids, ids[1:]): \n",
+    "        counts[pair] = counts.get(pair, 0) + 1\n",
+    "    return counts\n",
+    "\n",
+    "\n",
+    "def merge(ids: list[int], pair: tuple[int, int], idx: int) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    In the list of integers (ids), replace all consecutive occurrences\n",
+    "    of pair with the new integer token idx\n",
+    "    Example: ids=[1, 2, 3, 1, 2], pair=(1, 2), idx=4 -> [4, 3, 4]\n",
+    "    \"\"\"\n",
+    "    newids = []\n",
+    "    i = 0\n",
+    "    while i < len(ids):\n",
+    "        # if not at the very last position AND the pair matches, replace it\n",
+    "        if ids[i] == pair[0] and i < len(ids) - 1 and ids[i+1] == pair[1]:\n",
+    "            newids.append(idx)\n",
+    "            i += 2\n",
+    "        # otherwise, only proceed one step to check next pair\n",
+    "        else:\n",
+    "            newids.append(ids[i])\n",
+    "            i += 1\n",
+    "    return newids"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class BasicTokenizer:\n",
+    "    def __init__(self, ):\n",
+    "        # default: vocab size of 256 (all bytes), no merges, no patterns\n",
+    "        self.merges: dict[tuple[int, int], int] = {}  # (int, int) -> int\n",
+    "        self.pattern: str = \"\" \n",
+    "        self.special_tokens: dict[str, int] = {}  # str -> int, e.g. {'<|endoftext|>': 100257}\n",
+    "        self.vocab: dict[int, bytes] = self._build_vocab()  # int -> bytes\n",
+    "\n",
+    "    def train(self, text: str, vocab_size: int, verbose: bool = False):\n",
+    "        assert vocab_size > 256\n",
+    "        num_merges = vocab_size - 256\n",
+    "\n",
+    "        for i in range(num_merges):\n",
+    "            stats = get_stats()\n",
+    "\n",
+    "    def encode(self, text: str) -> list[int]:\n",
+    "        ...\n",
+    "    \n",
+    "    def decode(self, ids: list[int]) -> str:\n",
+    "        ..."
+   ]
   },
   {
    "cell_type": "markdown",
